# HR-management-system

./: README.md  pyproject.toml  requirements.txt
ats_enigne/ats_ranker/api/: app.py
ats_enigne/ats_ranker/core/: scorer.py
ats_enigne/ats_ranker/pipeline/: ranker.py
ats_system/ats_backend/: config.py
ats_system/ats_backend/orchestration/: job_flow.py
ats_system/ats_backend/orm/: models.py  session.py
ats_system/ats_backend/telemetry/: logging.py
doc_pipeline/: config.py  interfaces.py  pipeline.py
doc_pipeline/gatekeeper/: gatekeeper.py
doc_pipeline/ingest/: docling_ingest.py
doc_pipeline/ocr/: paddle_ocr.py
doc_pipeline/parse_pipeline/: config.py  interfaces.py
doc_pipeline/parse_pipeline/gatekeeper/: gatekeeper.py
doc_pipeline/parse_pipeline/ingest/: docling_ingest.py
doc_pipeline/parse_pipeline/ocr/: paddle_ocr.py
doc_pipeline/parse_pipeline/prompts/: semantic_enricher.md
doc_pipeline/parse_pipeline/rule/: rejection_rules.json
doc_pipeline/parse_pipeline/semantic/: spacy_parser.py
doc_pipeline/parse_pipeline/serialization/: schema.py
doc_pipeline/parse_pipeline/slm/: slm_client.py
doc_pipeline/parse_pipeline/storage/: db_client.py
doc_pipeline/parse_pipeline/vector/: Faiss_builder.py  chroma_builder.py
doc_pipeline/semantic/: spacy_parser.py
doc_pipeline/serialization/: schema.py
doc_pipeline/storage/: db_client.py
resume_ats/resume_reviewer/: pipeline.py
resume_ats/resume_reviewer/agent/: ats_agent.py
resume_ats/resume_reviewer/api/: deps.py  schemas.py
shared/: constants.py
(+9 files in other folders)
