[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr_management_system"
version = "0.1.0"
description = "AI-assisted ATS for resume ingestion, screening, matching, and ranking"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "duckdb>=0.9.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.4",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pymupdf>=1.23.0",
    "docling>=1.0.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "spacy>=3.7.0",
    "loguru>=0.7.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.19.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0", "black>=23.0", "mypy>=1.5.0"]